--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,38 @@
-# Основные зависимости Flask
-Flask==3.0.0
-Flask-SQLAlchemy==3.1.1
-Flask-Login==0.6.3
-Flask-Migrate>=4.0.6
-Flask-Mail==0.9.1
-Flask-WTF==1.2.1
-
-# База данных
-SQLAlchemy>=2.0.35
-
-# Формы и валидация
-WTForms==3.1.1
-
-# Безопасность
-Werkzeug==3.0.1
-
-# Переменные окружения
+flask==3.0.1
+flask-sqlalchemy==3.1.1
+flask-wtf==1.2.1
+flask-login==0.6.3
 python-dotenv==1.0.0
-
-# HTTP запросы
+werkzeug==3.0.3
+bcrypt==4.0.1
 requests==2.31.0
-
-# Telegram Bot
-python-telegram-bot==21.0.1
-
-# Почта
+pillow==10.2.0
+email-validator==2.1.0
+sqlalchemy==2.0.25
+wtforms==3.0.1
+pytest==7.4.4
+ruff==0.1.13
+pyright==1.1.280
+flask-migrate==4.0.7
+cryptography==48.0.0
+yookassa==3.0.0
+psycopg2-binary==2.9.9
+python-telegram-bot==20.7
+jinja2==3.1.3
+python-jose==3.3.0
+markupsafe==2.1.5
 blinker==1.7.0
-
-# Утилиты
-MarkupSafe==2.1.3
+itsdangerous==2.1.2
+click==8.1.7
+tqdm==4.66.1
+black==23.12.1
+isort==5.13.2
+flake8==6.1.0
+mypy==1.7.1
+coverage[toml]==7.4.0
+bandit==1.7.6
+pytest-cov==4.1.0
+pytest-html==4.1.1
+selenium==4.17.2
+html5lib==1.1
+beautifulsoup4==4.12.3
